syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.huel.cloudhub.file.fs.meta";
option java_outer_classname = "ContainerMetaProtos";

// part of .meta
message SerializedBlockFileMeta {
  string file_id = 1;
  int32 start = 2;
  int32 end = 3;
  int64 end_block_bytes = 4;
  // if cross container count.
  bool cross = 5;
}

// .meta file
message SerializedContainerBlockMeta {
  // in kb, block size.
  int32 block_size = 1;
  int32 used_block = 2;
  // block capacity (limit of block)
  int32 block_cap = 3;
  string crc = 4;
  repeated SerializedBlockFileMeta block_metas = 5;
}

// part of .cmeta
message SerializedContainerMeta {
  string locator = 1;
  optional int64 version = 2;
}

// .cmeta file
message SerializedContainerGroupMeta {
  repeated SerializedContainerMeta meta = 1;
}
